<resources>
    <string name="app_name">UnitConverter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hex_to_decimal">Hex to Decimal</string>
    <string name="decimal_to_binary">Decimal to Binary</string>
    <string name="base_to_base">Any base to any (other) base</string>
    <string name="time_until">How many days until (day)?</string>
    <string name="general_convert">General Unit Converter</string>

    <string name="any_base_editText">Type any code of any base less than 37</string>
    <string name="hex_text">Insert a 0x(hexadecimal) value here.</string>
    <string name="decimal_text">Insert a decimal value here</string>
    <string name="binary_text">Insert a binary value</string>
    <string name="convert_button">Convert</string>
    <string name="clear_button">Clear </string>
    <string name="title_activity_hex_to_decimal">HexToDecimal</string>
    <string name="title_activity_decimal_to_binary">DecimalToBinary</string>
    <string name="title_activity_any_base_to_any_base">AnyBaseToAnyBase</string>
    <string name="title_activity_time_until_day">TimeUntilDay</string>
    <string name="starting_day">Enter starting day</string>
    <string name="today_button">Today</string>
    <string name="ending_day">Enter ending day</string>
    <string name="time_elapsed"></string>
    <string name="days_until_button">Number of days from starting date</string>

    <string name="title_activity_general_unit_converter">GeneralUnitConverter</string>
    <string name="lbs_to_kgs">Pounds to Kilograms</string>
    <string name="far_to_celsius">Fahrenheit to Celsius</string>
    <string name="feet_to_meters">Feet to Meters</string>
    <string name="miles_to_km">Miles to Kilometers</string>

    <string name="title_activity_pounds_to_kg">PoundsToKg</string>
    <string name="pounds_text">Insert a weight in pounds here</string>
    <string name="kg_text">Insert a weight in kg here</string>

    <string name="title_activity_fahr_to_celsius">FahrToCelsius</string>
    <string name="fahr_text">Insert a temperature in Fahrenheit</string>
    <string name="celsius_text">Insert a temperature in Celsius</string>

    <string name="title_activity_feet_to_meters">FeetToMeters</string>
    <string name="feet_text">Insert a value in feet</string>
    <string name="meters_text">Insert a value in meters</string>

    <string name="title_activity_miles_to_km">MilesToKm</string>
    <string name="miles_text">Insert a value in miles</string>
    <string name="km_text">Insert a value in kilometers</string>
</resources>
