<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bryan.unitconverter.FahrToCelsius">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fahr_edit_text"
        android:hint="@string/fahr_text"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convert_fahrToCelsius"
        android:text="@string/convert_button"
        android:onClick="convertValues"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fahr_edit_text"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/celsius_edit_text"
        android:hint="@string/celsius_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/convert_fahrToCelsius"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear_fahrToCelsius"
        android:text="@string/clear_button"
        android:onClick="clearBoth"
        android:layout_below="@+id/celsius_edit_text"
        android:layout_alignLeft="@+id/convert_fahrToCelsius"
        android:layout_alignStart="@+id/convert_fahrToCelsius" />

</RelativeLayout>
