<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bryan.unitconverter.AnyBaseToAnyBase">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/base1"
        android:hint="@string/any_base_editText"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convert_anyBase"
        android:text="@string/convert_button"
        android:onClick="convertValues"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/base1"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/base2"
        android:hint="@string/any_base_editText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/convert_anyBase"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear_anyBase"
        android:text="@string/clear_button"
        android:onClick="clearBoth"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@id/convert_anyBase"
        android:layout_alignStart="@id/convert_anyBase" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_base1"
        android:layout_toLeftOf="@+id/convert_anyBase"
        android:layout_below="@id/base1"
        />

</RelativeLayout>
